fix: gaps for product form

--- a/client/src/components/admin/AdminCropperImage/index.module.scss
+++ b/client/src/components/admin/AdminCropperImage/index.module.scss
@@ -2,7 +2,7 @@
 
 .imageUploadWrapper {
   margin-top: 52px;
-  @include flexGap(24px, column);
+  @include flexGap(16px, column);
 
   .cropperContainerWrapper {
     @include flex(column);
